--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@graphprotocol/graph-cli": "^0.36.1",
     "@graphprotocol/graph-ts": "^0.29.0",
     "@graphprotocol/hardhat-graph": "https://github.com/graphprotocol/hardhat-graph",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
