--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -31,9 +31,9 @@ dataSources:
         #   handler: handleOrganizerAdded
         # - event: OrganizerRemoved(indexed address)
         #   handler: handleOrganizerRemoved
-        - event: EventAdded(address,uint256,string,string)
+        - event: EventAdded(address,uint256,string,string,string,uint256)
           handler: handleEventAdded
-        - event: EventToken(uint256,uint256,string,string,address,address)
+        - event: EventToken(uint256,uint256,address,address)
           handler: handleEventToken
         - event: BurnToken(uint256,uint256,address)
           handler: handleBurnToken
