--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "hardhat-local": "hardhat node --hostname 0.0.0.0",
     "deploy": "npx hardhat run scripts/deploy.js",
+    "deploy_UToken": "npx hardhat run scripts/deploy_UToken.js",
     "deploy-alliance": "npx hardhat run alliance/deploy-alliance.js --network allianceChain",
     "merkleTree": "node ./scripts/setMerkleTree.js",
     "flatten": "npx hardhat flatten ./contracts/NoA.sol > audit/NoA.sol",
