--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  anvil:
+    container_name: anvil
+    image: ghcr.io/foundry-rs/foundry:nightly
+    ports:
+      - "8545:8545"
+    entrypoint: 'anvil --host 0.0.0.0 --no-cors'
+
   graph-node:
     image: graphprotocol/graph-node
     ports:
@@ -11,19 +18,19 @@ services:
     depends_on:
       - ipfs
       - postgres
+      - anvil
     extra_hosts:
-      - host.docker.internal:host-gateway      
+      - host.docker.internal:host-gateway
     environment:
       postgres_host: postgres
       postgres_user: graph-node
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      # Change next line if you want to connect to a different JSON-RPC endpoint
-      ethereum: 'mainnet:http://host.docker.internal:8545'
+      ethereum: 'anvil:http://anvil:8545'
       GRAPH_LOG: info
   ipfs:
-    image: ipfs/go-ipfs:v0.4.23
+    image: ipfs/go-ipfs:v0.10.0
     ports:
       - '5001:5001'
     volumes:
@@ -32,10 +39,18 @@ services:
     image: postgres
     ports:
       - '5432:5432'
-    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
+    command:
+      [
+        "postgres",
+        "-cshared_preload_libraries=pg_stat_statements"
+      ]
     environment:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
+      # FIXME: remove this env. var. which we shouldn't need. Introduced by
+      # <https://github.com/graphprotocol/graph-node/pull/3511>, maybe as a
+      # workaround for https://github.com/docker/for-mac/issues/6270?
+      PGDATA: "/var/lib/postgresql/data"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
