--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "flatten": "npx hardhat flatten ./contracts/NoAV1.sol > audit/NoAV1.sol",
     "upgrade-proxy": "npx hardhat run scripts/upgrade.js",
     "test": "npx hardhat test --network hardhat",
-    "graph-local-node-start": "cd ./anvil-graph-node && docker-compose up -d",
-    "graph-local-node-stop": "cd ./anvil-graph-node &&  docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
-    "anvil-logs": "cd ./anvil-graph-node &&  docker-compose logs -f -t --tail=\"100\" anvil",
-    "graph-node-logs": "cd ./anvil-graph-node &&  docker-compose logs -f -t --tail=\"100\" graph-node",
+    "graph-local-node-start": "cd ./docker && docker-compose up -d",
+    "graph-local-node-stop": "cd ./docker &&  docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
+    "anvil-logs": "cd ./docker &&  docker-compose logs -f -t --tail=\"100\" anvil",
+    "graph-node-logs": "cd ./docker &&  docker-compose logs -f -t --tail=\"100\" graph-node",
     "graph-local-codegen": "cd ./subgraph && npm run codegen",
     "graph-local-build": "cd ./subgraph && npm run build",
     "create-local-subgraph-node": "cd ./subgraph &&  npm run create-local",
