--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3'
 services:
-  anvil:
-    container_name: anvil
-    image: ghcr.io/foundry-rs/foundry:nightly
+  hardhat-node:
+    container_name: hardhat-node
+    image: cartesi/hardhat-node
     ports:
       - "8545:8545"
-    entrypoint: 'anvil --host 0.0.0.0 --no-cors'
 
   graph-node:
     image: graphprotocol/graph-node
@@ -18,7 +17,7 @@ services:
     depends_on:
       - ipfs
       - postgres
-      - anvil
+      - hardhat-node
     extra_hosts:
       - host.docker.internal:host-gateway
     environment:
@@ -27,7 +26,7 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'anvil:http://anvil:8545'
+      ethereum: 'mainnet:http://hardhat-node:8545'
       GRAPH_LOG: info
   ipfs:
     image: ipfs/go-ipfs:v0.10.0
