--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,7 +6,8 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: showdao
-    network: anvil
+    # network: anvil
+    network: mainnet
     source:
       address: "0x0165878A594ca255338adfa4d48449f69242Eb8F"
       abi: NoAV1
