--- a/package.json
+++ b/package.json
@@ -49,8 +49,14 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git",
+    "@typechain/ethers-v5": "^10.1.1",
+    "@typechain/hardhat": "^6.1.4",
+    "chai": "^4.3.7",
     "dotenv": "^16.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -59,12 +65,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.1",
+    "ethers": "^5.7.2",
     "hardhat": "^2.10.2",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-gas-reporter": "^1.0.9",
     "hardhat-tracer": "^1.1.0-rc.8",
     "solc": "^0.8.13",
     "solhint": "^3.3.7",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
@@ -72,10 +82,7 @@
     "@graphprotocol/graph-ts": "^0.29.0",
     "@graphprotocol/hardhat-graph": "https://github.com/graphprotocol/hardhat-graph",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
-    "chai": "^4.3.7",
     "keccak256": "^1.0.6",
     "matchstick-as": "^0.5.0",
     "merkletreejs": "^0.2.32"
