--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git",
+    "@typechain/hardhat": "^6.1.4",
     "dotenv": "^16.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -61,6 +63,7 @@
     "eslint-plugin-promise": "^6.0.1",
     "hardhat": "^2.10.2",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-gas-reporter": "^1.0.9",
     "hardhat-tracer": "^1.1.0-rc.8",
     "solc": "^0.8.13",
     "solhint": "^3.3.7",
