--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     network: mainnet
     source:
       address: "0x0165878A594ca255338adfa4d48449f69242Eb8F"
-      abi: NoAV1
+      abi: DerivativeNFT
       startBlock: 0
     mapping:
       kind: ethereum/events
