--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "@typechain/ethers-v5": "^10.1.1",
-    "@typechain/hardhat": "^6.1.4",
+    "@typechain/ethers-v5": "8.0.5",
+    "@typechain/hardhat": "3.0.0",
     "@types/chai": "4.2.22",
     "@types/mocha": "9.0.0",
     "@types/node": "16.11.11",
@@ -81,8 +81,8 @@
     "solidity-coverage": "0.7.17",
     "ts-generator": "0.1.1",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^4.9.3"
+    "typechain": "6.0.5",
+    "typescript": "4.5.2"
   },
   "husky": {
     "hooks": {
