--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git",
+    "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.4",
     "dotenv": "^16.0.1",
     "eslint": "^8.23.0",
@@ -57,62 +61,30 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.7.2",
     "hardhat": "^2.10.2",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-log-remover": "^2.0.2",
+    "hardhat-spdx-license-identifier": "^2.1.0",
     "hardhat-tracer": "^1.1.0-rc.8",
     "solc": "^0.8.13",
     "solhint": "^3.3.7",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
     "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "@graphprotocol/graph-cli": "^0.36.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.2",
-    "@nomiclabs/hardhat-truffle5": "^2.0.7",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/test-helpers": "^0.5.16",
-    "@typechain/ethers-v5": "8.0.5",
-    "@typechain/hardhat": "3.0.0",
-    "@types/chai": "4.2.22",
-    "@types/mocha": "9.0.0",
-    "@types/node": "16.11.11",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
-    "@typescript-eslint/parser": "5.5.0",
-    "chai": "^4.3.7",
-    "defender-relay-client": "1.12.1",
-    "dotenv": "^16.0.1",
-    "eslint": "8.3.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "ethereum-waffle": "3.4.0",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.12.3",
-    "hardhat-contract-sizer": "^2.6.1",
-    "hardhat-gas-reporter": "^1.0.9",
-    "hardhat-log-remover": "2.0.2",
-    "hardhat-spdx-license-identifier": "2.0.3",
-    "husky": "7.0.4",
-    "keccak256": "^1.0.6",
-    "matchstick-as": "^0.5.0",
-    "merkletreejs": "^0.3.9",
-    "prettier": "2.5.0",
-    "prettier-plugin-solidity": "1.0.0-beta.19",
-    "solidity-coverage": "0.7.17",
-    "ts-generator": "0.1.1",
-    "ts-node": "^10.9.1",
-    "typechain": "6.0.5",
-    "typescript": "4.5.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern 'contracts/**/*.sol' --pattern 'helpers/**/*.ts'  --pattern 'test/**/*.ts' --pattern 'tasks/**/*.ts'"
-    }
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged --pattern 'contracts/**/*.sol' --pattern 'helpers/**/*.ts'  --pattern 'test/**/*.ts' --pattern 'tasks/**/*.ts'"
+    }
   },
   "author": "Bitsoul",
   "contributors": [
