--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.4",
+    "@types/mocha": "^10.0.1",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
