--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -8,8 +8,8 @@ dataSources:
     name: bitsoul
     network: mainnet
     source:
-      address: "0x0165878A594ca255338adfa4d48449f69242Eb8F"
-      abi: DerivativeNFT
+      address: "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e"
+      abi: NFTDerivativeProtocolTokenV1
       startBlock: 0
     mapping:
       kind: ethereum/events
