--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,7 +29,8 @@ services:
       ethereum: 'mainnet:http://hardhat-node:8545'
       GRAPH_LOG: info
   ipfs:
-    image: ipfs/go-ipfs:v0.10.0
+    # image: ipfs/go-ipfs:v0.10.0
+    image: ipfs/go-ipfs:v0.18.0-rc2
     ports:
       - '5001:5001'
     volumes:
