--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -69,7 +69,7 @@ dataSources:
           handler: handleDerivativeNFTDeployed
         - event: DerivativeNFTCollected(uint256,address,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleDerivativeNFTCollected
-        - event: DerivativeNFTAirdroped(uint256,address,uint256,uint256,uint256[],uint256[],uint256[],uint256)
+        - event: DerivativeNFTAirdroped(uint256,address,uint256,uint256[],uint256[],uint256[],uint256)
           handler: handleDerivativeNFTAirdroped
       file: ./src/manager-mapping.ts
 
