--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: SBT
     network: mainnet
     source:
-      address: "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e"
+      address: "0x610178dA211FEF7D417bC0e6FeD39F05609AD788"
       abi: Events
       startBlock: 0
     mapping:
@@ -49,7 +49,7 @@ dataSources:
     name: Manager
     network: mainnet
     source:
-      address: "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
+      address: "0x0165878A594ca255338adfa4d48449f69242Eb8F"
       abi: Events
       startBlock: 0
     mapping:
@@ -100,7 +100,7 @@ dataSources:
     name: BankTreasury
     network: mainnet
     source:
-      address: "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82"
+      address: "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
       abi: Events
       startBlock: 0
     mapping:
@@ -127,7 +127,7 @@ dataSources:
     name: Voucher
     network: mainnet
     source:
-      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
+      address: "0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6"
       abi: Events
       startBlock: 0
     mapping:
@@ -136,7 +136,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - MintNFTVoucher
-        - UserAmountLimitSet
+        # - UserAmountLimitSet
         - GenerateVoucher
       abis:
         - name: Events
@@ -144,8 +144,8 @@ dataSources:
       eventHandlers:
         - event: MintNFTVoucher(uint256,address,uint8,uint256,uint256,uint256)
           handler: handleMintNFTVoucher
-        - event: UserAmountLimitSet(uint256,uint256,uint256)
-          handler: handleUserAmountLimitSet
+        # - event: UserAmountLimitSet(uint256,uint256,uint256)
+        #   handler: handleUserAmountLimitSet
         - event: GenerateVoucher(uint8,uint256,uint256,uint256,uint256,uint256)
           handler: handleGenerateVoucher
       file: ./src/voucher-mapping.ts
@@ -154,7 +154,7 @@ dataSources:
     name: ModuleGlobals
     network: mainnet
     source:
-      address: "0x9A676e781A523b5d0C0e43731313A708CB607508"
+      address: "0x0B306BF915C4d645ff596e518fAf3F9669b97016"
       abi: Events
       startBlock: 0
     mapping:
@@ -208,7 +208,7 @@ dataSources:
     name: FeeCollectModule
     network: mainnet
     source:
-      address: "0x0B306BF915C4d645ff596e518fAf3F9669b97016"
+      address: "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE"
       abi: Events
       startBlock: 0
     mapping:
@@ -229,7 +229,7 @@ dataSources:
     name: Receiver
     network: mainnet
     source:
-      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+      address: "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
       abi: Events
       startBlock: 0
     mapping:
@@ -259,11 +259,29 @@ dataSources:
       apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
+        - MarketPlaceERC3525Received
+        # - FixedPriceSet
         - AddMarket
+        # - RemoveMarket
+        # - PublishSale
+        # - RemoveSale
+        # - Traded
       abis:
         - name: Events
           file: ./abis/Events.json
       eventHandlers:
+        - event: MarketPlaceERC3525Received(address,uint256,uint256,uint256,bytes,uint256)
+          handler: handleMarketPlaceERC3525Received
+        # - event: FixedPriceSet(uint256,uint128,uint128,uint128,uint256)
+        #   handler: handleFixedPriceSet
         - event: AddMarket(address,uint8,uint8,uint16)
           handler: handleAddMarket
+        # - event: RemoveMarket(address)
+        #   handler: handleRemoveMarket
+        # - event: PublishSale((uint256,uint256,uint256,uint128,uint32,uint128,uint8,uint128,uint128),address,uint256,uint128)
+        #   handler: handlePublishSale
+        # - event: RemoveSale(uint256,uint128,uint256,uint256)
+        #   handler: handleRemoveSale
+        # - event: Traded(indexed uint24,indexed address,uint256,uint32,uint128,uint256,uint128,(uint256,uint256,uint256,uint256))
+        #   handler: handleTraded
       file: ./src/marketplace-mapping.ts
